fixed grid gap not working on mobile

--- a/frontend/src/App.sass
+++ b/frontend/src/App.sass
@@ -33,10 +33,9 @@ a
     display: flex
     justify-content: center
     gap: 110px
+    grid-gap: 110px
     
 .main-small
     display: flex
     flex-direction: column
     align-items: center
-    gap: 3rem
-    grid-gap: 3rem
