--- a/frontend/src/components/Socket.sass
+++ b/frontend/src/components/Socket.sass
@@ -1,4 +1,6 @@
-.threads
+@media only screen and (max-width: 767px)
+    .threadsCtn
+        margin-top: 3rem
 
 .threadsHeading
     display: flex
